patterns/eks-automode/automode-custom-nodepools/sample-app.yaml
---
# StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: httpd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd
  serviceName: httpd-service
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
        - image: httpd:2.4
          name: httpd
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /usr/local/apache2/logs
              name: httpd-logs
      nodeSelector:
        NodeGroupType: amd64
      tolerations:
        - key: amd64
          operator: Exists
  volumeClaimTemplates:
    - metadata:
        name: httpd-logs
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        storageClassName: auto-ebs-sc
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: httpd
  type: ClusterIP
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-ingress
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - backend:
              service:
                name: httpd-service
                port:
                  number: 80
            path: /
            pathType: Prefix
